@startuml modelageProfessor

class Usuario {
  - nome : String
}

class Faixa {
  - descricao: String
  - preco: Double
  - observacao: String
  - especificacoes: String
}

enum Tamanho {
  + A1: int
  + A2: int
  + A3: int
  + A4: int
  + A5: int
}

class Venda {
  - data: LocalDateTime
  - 
}

class ItemVenda {
  - preco: Double
  - quantidade: Integer
}

Faixa " * " --> " 1 " Tamanho
Venda " 1 " --> " * " ItemVenda
Venda " * " --> " 1 " Usuario

ItemVenda " * " *--> " 1 " Faixa



' ***************
class Pedido {

}

enum Status {
  - AGUARDANDOPAGAMENTO
  - RETIRADOESTOQUE
  - ENVIADO
  - ENTREGUE
}

class HistoricoStatus {
  - dataHora: LocalDateTime
}

HistoricoStatus " * " *--> " 1 " Pedido
HistoricoStatus " * " --> " 1 " Status

'  a tabela vai ficar: id, idproduto, status, dat
@enduml